# server/models/Category.js
@@ -1,0 +1,7 @@
+import mongoose from "mongoose";
+
+const categorySchema = new mongoose.Schema({
+  title: { type: String }
+});
+
+export default mongoose.model("Category", categorySchema);
